# zkllvm-stdlib

./: CMakeLists.txt
libc/: CMakeLists.txt
libc/include/: math.h  stdint.h  stdlib.h  wctype.h
libc/zk/: malloc.c
libcpp/: CMakeLists.txt  __config  __config_site
libcpp/__atomic/: aliases.h
libcpp/zk/: new.cpp
